added entity generator, user-storage, implemented user crud, improved error handling
